fixed layout problem in booking page when loading

--- a/client/src/components/booking/booking.styles.scss
+++ b/client/src/components/booking/booking.styles.scss
@@ -2,6 +2,7 @@
 
 .booking {
   padding: 5rem;
+  min-height: 20rem;
   color: rgb(85, 85, 85);
   position: relative;
   height: 100%;
